bk_ida/gccida/c1/remove_useless_values
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/remove_useless_values/src/cselib.c:846:16: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse( hash_table_0, discard_useless_locs, 0LL); 
               ^~~~~~~~~~~~
               hash_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/remove_useless_values/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/remove_useless_values/src/cselib.c:849:16: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse( hash_table_0, discard_useless_values, 0LL); 
               ^~~~~~~~~~~~
               hash_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/remove_useless_values/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/remove_useless_values/src/obj/cselib.o] Error 1
